--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a:hover {
   width: 400px;
   position: absolute;
   right: 50px;
-  top: 200px;
+  top: 10%;
 }
 
 .rdiv .form, .outform{
@@ -145,6 +145,46 @@ a:hover {
   text-align: center;
   color: white;
   font-size: 20px;
+}
+
+.rdiv .form input {
+  background: rgba(255,255,255,0.2);
+  color: white;
+}
+::-webkit-input-placeholder { /* Chrome */
+  color: white;
+  opacity: .5;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+  opacity: .5;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+  opacity: .5;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: white;
+  opacity: .5;
+}
+
+.rdiv input {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 .rdiv button {
