--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background: #000;
 }
 
-video {
+video#bgvid {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -187,4 +187,6 @@ a:hover {
 .rdiv button {
   width: 100%;
   white-space: normal;
+  text-shadow: rgba(255, 255, 255, 0.498039) 0px 0px 15px, rgba(255, 255, 255, 0.498039) 0px 0px 10px;
+  font-size: 20px;
 }
