--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  color: white;
 }
 
 body {
@@ -93,7 +94,7 @@ a:hover {
 }
 .container {
   width: 100%;
-  height: 100%;
+  height: 75%;
   position: relative;
 }
 .footer {
@@ -189,4 +190,56 @@ a:hover {
   white-space: normal;
   text-shadow: rgba(255, 255, 255, 0.498039) 0px 0px 15px, rgba(255, 255, 255, 0.498039) 0px 0px 10px;
   font-size: 20px;
+}
+
+.oneslide {
+  position: relative;
+}
+.oneslide h1 {
+  color: white;
+  position: absolute;
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 50px;
+
+}
+
+div.kinds{
+  background: rgba(48,112,165,1);
+  text-align: center;
+  padding: 5%;
+
+}
+
+div.kinds img{
+  border-radius: 10%;
+}
+
+div.kinds h2 {
+  text-shadow: 0px 0px 45px rgba(0, 0, 0, 1);
+}
+
+div.carousel {
+
+}
+
+div.carousel div.item {
+  height: 500px;
+  background: rgba(55,55,55,0.7);
+}
+
+div.carousel div.item img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+
+  -webkit-box-shadow: 0px 0px 40px 10px rgba(154,107,255,1);
+  -moz-box-shadow: 0px 0px 40px 10px rgba(154,107,255,1);
+  box-shadow: 0px 0px 40px 10px rgba(154,107,255,1);
+}
+
+div.carousel .carousel-caption {
+  font-size: 30px
 }
