--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ a:hover {
 
 .rdiv .form {
   background: rgba(0,0,0,.3);
-  border-top: 5px #fc5 solid;
+  border-top: 5px #088ef0 solid;
 }
 
 .rdiv .form * {
@@ -190,6 +190,9 @@ a:hover {
   white-space: normal;
   text-shadow: rgba(255, 255, 255, 0.498039) 0px 0px 15px, rgba(255, 255, 255, 0.498039) 0px 0px 10px;
   font-size: 20px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.15);
+  background: #088ef0;
+  border: #088ef0 1px solid;
 }
 
 .oneslide {
