--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 500px) {
+/*@media only screen and (max-width: 500px) {
   body {
     border: black 2px solid;
   }
@@ -33,3 +33,4 @@
     border: orange 2px solid;
   }
 }
+*/
