--- a/style.css
+++ b/style.css
@@ -75,10 +75,6 @@ h1 {
 a {
   display: inline-block;
   color: #fff;
-  text-decoration: none;
-  background: rgba(0, 0, 0, 0.5);
-  padding: .5rem;
-  transition: .6s background;
 }
 
 a:hover {
@@ -216,19 +212,15 @@ div.logo {
 
 .oneslide {
   position: relative;
+  padding: 100px 30px;
 }
 
-.oneslide div.title {
+.oneslide h1 {
   color: orange;
-  padding: 50px;
-}
-
-.oneslide div.main {
-  padding: 0 25% 25% 25%;
-  position: relative;
 }
 
 .oneslide video {
+  border-radius: 25px;
   position: relative;
   top: 50%;
   -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
@@ -250,8 +242,6 @@ div.kinds h2 {
   text-shadow: 0px 0px 45px rgba(0, 0, 0, 1);
 }
 
-div.carousel {}
-
 div.carousel div.item {
   height: 500px;
   background: rgba(55, 55, 55, 0.7);
@@ -269,4 +259,28 @@ div.carousel div.item img {
 
 div.carousel .carousel-caption {
   font-size: 30px
+}
+
+div.footer-social img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.oneslide div.main-wrapper {
+  position: relative;
+  padding: 5%;
+}
+
+.oneslide div.markimgs {
+  width: 10%;
+  position: absolute;
+  top: 15%;
+  right: 10%;
+}
+
+.oneslide div.bbb {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
