--- a/responsive.css
+++ b/responsive.css
@@ -43,9 +43,16 @@
 .ttt {
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 @media screen and (max-width: 750px){
   .ttt {
     display: block;
+  }
+}
+
+@media screen and (min-width: 750px){
+  .oneslide .col-sm-8 {
+    width: 50%;
   }
 }
